# GlowOS

./: .gitignore  Cargo.toml  Makefile  README.md  deploy_usb.sh  qemu-run.sh
.cargo/: config.toml
image-builder/: deploy_usb.sh  qemu-run.sh
image-builder/src/: main.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  renderer.rs  terminal.rs  xhci.rs
kernel/src/allocator/: fixed_size_blocks.rs
kernel/src/drivers/: gdt.rs  interrupts.rs  mod.rs  serial.rs
kernel/src/drivers/usb/: mod.rs  pci.rs  xhci.rs
kernel/src/drivers/usb/xhci_helper/: mod.rs  xhci_registers.rs  xhci_rings.rs  xhci_trb.rs
kernel/src/memory/: allocator.rs  mod.rs
kernel/src/memory/allocator/: fixed_size_blocks.rs  linked_list.rs
kernel/src/renderer/: mod.rs  renderer.rs  text_font.rs  text_renderer.rs
kernel/src/renderer/font_renderer/: mod.rs  text_font.rs  text_renderer.rs
kernel/src/user/: terminal.rs
kernel/tests/: heap_allocations.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  serial.rs  terminal.rs  vga_buffer.rs  xhci.rs
src/allocator/: fixed_size_blocks.rs
tests/: basic_boot.rs  heap_allocations.rs  should_panic.rs  stack_overflow.rs
