[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "os"
path = "src/main.rs"
test = true
bench = false

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
#Tecnicly not needed only used for debug
uart_16550 = "0.6.0"

pic8259 = "0.10.1"

# Easy to substitute
pc-keyboard = "0.7.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
bootloader_api = "0.11"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 
test-timeout = 300 

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
#debug = true